--- a/package.json
+++ b/package.json
@@ -2,18 +2,25 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://atreides1.github.io/Todo-React-App",
   "dependencies": {
+    "-": "0.0.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "save-dev": "0.0.1-security"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "clean": "gh-pages-clean",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
